--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-three/fiber": "^9.5.0",
     "framer-motion": "^12.31.0",
     "gsap": "^3.14.2",
+    "leaflet": "^1.9.4",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
